# zakaz_zenan_zahmeti

./: .dockerignore  .env  Dockerfile.django  Dockerfile.fastapi  Dockerfile.frontend  api.text  docker-compose.local.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  text.txt
api/: app.py  auth.py  deps.py  django_compat.py  security.py
api/common/: enums.py
api/db/: base.py
api/models/: address.py  catalog.py  category.py  favorite.py  order.py  product.py  product_image.py  user.py
api/routers/: addresses.py  auth.py  categories.py  favorites.py  orders.py  products.py  seller.py
api/schemas/: address.py  catalog.py  category.py  favorite.py  order.py  product.py  product_image.py  user.py
backend/: manage.py
backend/apps/addresses/: admin.py  apps.py  models.py
backend/apps/catalog/: admin.py  apps.py  models.py
backend/apps/favorites/: admin.py  apps.py  models.py
backend/apps/messaging/: apps.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: CategoryFilter.tsx  Contact.tsx  Container.tsx  FavoriteButton.tsx  Footer.tsx  Footer_top.tsx  Header.tsx  HeaderMenu.tsx  HomeBanner.tsx  HomeTabBar.tsx  Language.tsx  MobileMenu.tsx  Product.tsx  ProductGrid.tsx  SearchBar.tsx  SearchModal.tsx  SideMenu.tsx  SignIn.tsx
frontend/constants/: data.ts  types.ts
frontend/images/: index.ts
frontend/lib/: api.ts
seller_frontend/seller/: package-lock.json  package.json
(+59 files in other folders)
