[project]
name = "zakaz-zenan-zahmeti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asgiref==3.10.0",
    "black>=25.12.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "Django==5.2.7",
    "django-cors-headers==4.9.0",
    "django-jazzmin==3.0.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.119.1",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "idna==3.11",
    "packaging==25.0",
    "pillow==12.0.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.3",
    "pydantic_core==2.41.4",
    "PyJWT==2.10.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.44",
    "sqlparse==0.5.3",
    "starlette==0.48.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "uvicorn==0.38.0",
    "whitenoise==6.11.0",
]
